fix css item height, so captions align

--- a/app/src/app/shared/components/timeline/timeline.component.scss
+++ b/app/src/app/shared/components/timeline/timeline.component.scss
@@ -83,6 +83,7 @@ $container-height: 20em;
   // Padding between items/artworks
   padding-left: 10px;
   padding-right: 10px;
+  height: 100%;
 }
 
 .item {
